feat: add teamlead reconciliation history
